--- a/.github/workflows/pypi-publish-prerelease.yml
+++ b/.github/workflows/pypi-publish-prerelease.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install Poetry
       uses: Gr1N/setup-poetry@v9
       with:
-        poetry-version: 'latest'
+        poetry-version: '1.8.3'
 
     - name: Install dependencies
       run: |
