Debug: Github workflow

--- a/.github/workflows/pypi-publish-prerelease.yml
+++ b/.github/workflows/pypi-publish-prerelease.yml
@@ -31,10 +31,7 @@ jobs:
     - name: Configure Poetry for PyPI
       run: |
         poetry config repositories.test-pypi https://test.pypi.org/legacy/
-
-    - name: Configure Poetry for PyPI
-      run: |
-        poetry config pypi-token.test-pypi "${{ secrets.PYPI_API_TOKEN }}"
+        poetry config http-basic.pypi __token__ "${{ secrets.PYPI_API_TOKEN }}"
 
     - name: Build package
       run: poetry build
